# OSProbe

OSprobe/: CMakeLists.txt  ConsoleAplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  memory_commit.h  number_of_logical_procesors.h  number_of_running processes.h  page_size.h  total_available_phys_n_virtual_memory.h
OSprobe/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  ConsoleApplication1.vcxproj.FileListAbsolute.txt  vc143.idb
OSprobe/x64/Debug/ConsoleA.6843c029.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
